--- a/Pipfile
+++ b/Pipfile
@@ -25,8 +25,10 @@ flasgger = "*"
 pylint = "*"
 safety = "*"
 black = "*"
+psycopg2 = "*"
 
 [dev-packages]
+autopep8 = "*"
 
 [requires]
 python_version = "3.9"
